# shellcoder

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml  rustfmt.yml
src/: alloc.rs  error.rs  io.rs  lib.rs  ops.rs  prelude.rs  static.rs
